[package]
name = "minecraft_background_autoclicker"
version = "1.0.0"
edition = "2021"
authors = ["Jose Angel"]
description = "A simple Rust autoclicker for Minecraft"
license = "MIT"
repository = "https://github.com/tu_usuario/minecraft-autoclicker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }
ctrlc = "3.2"
regex = "1.12.2"

